--- a/mail.ipynb
+++ b/mail.ipynb
@@ -119,13 +119,13 @@
         "\n",
         "  list_for_find_min=[]\n",
         "  for file in opened_files:\n",
-        "    list_for_find_min+=[file.readline()]\n",
+        "    list_for_find_min+=[file.readline()]#считаем первые строки из всех файлов\n",
         "  min_index = 1\n",
         "  while min_index != -1:\n",
         "    min_index = find_min(list_for_find_min)\n",
         "    if min_index!=-1:\n",
-        "      sorted.writelines(list_for_find_min[min_index])\n",
-        "      list_for_find_min[min_index] = opened_files[min_index].readline()\n",
+        "      sorted.writelines(list_for_find_min[min_index])#пишем самую маленькую строку в фаил\n",
+        "      list_for_find_min[min_index] = opened_files[min_index].readline()#сдвигаем строку только в том файле, откуда взяли строку\n",
         " \n",
         "\n",
         "  for file in opened_files:\n",
@@ -142,12 +142,12 @@
         "\n",
         "  with open(dir+from_file_path) as f:\n",
         "    for line in f:\n",
-        "      if str(line)[-1]=='\\n':\n",
+        "      if str(line)[-1]=='\\n':#возврат строки отрежем, а потом вернем, чтобы при сортировке он не мешал\n",
         "        line = str(line)[:-1]\n",
         "      else:\n",
         "        line = str(line)\n",
         "      memused+=len(line)\n",
-        "      if memused>max_mem:\n",
+        "      if memused>max_mem:#Если память закончилась, то записываем фаил и начинаем следующий.\n",
         "        sort_and_write_little_file(lines,next_file,files)\n",
         "        memused = len(line)\n",
         "        count+=1\n",
@@ -155,17 +155,16 @@
         "        next_file = dir+str(count)\n",
         "      line = shell_sort(line)+'\\n'\n",
         "      lines +=[line]\n",
-        "    sort_and_write_little_file(lines,next_file,files)#запишем остаток\n",
-        "    if len(files)==1:\n",
+        "    sort_and_write_little_file(lines,next_file,files)#запишем остаток строк\n",
+        "    if len(files)==1:#если фаил один, то не надо его записывать заново, просто переименуем\n",
         "      os.rename(dir+'0',dir+to_file_path)\n",
         "    else:\n",
         "      write_sorted(dir,files,to_file_path)\n",
-        "\n",
-        "    if delete_temp_files_after_sorting:\n",
-        "      for file in files:\n",
-        "        os.remove(file)\n"
+        "      if delete_temp_files_after_sorting:\n",
+        "        for file in files:\n",
+        "          os.remove(file)\n"
       ],
-      "execution_count": null,
+      "execution_count": 142,
       "outputs": []
     },
     {
@@ -191,15 +190,15 @@
         "id": "8VQju461B2e0"
       },
       "source": [
-        "str_count = 20000\n",
-        "max_str_len = 300\n",
+        "str_count = 200\n",
+        "max_str_len = 30\n",
         "create_text_file(str_count,max_str_len,'/content/temp.txt')\n",
         "\n",
         "delete_temp_files_after_sorting = True\n",
         "max_mem = 50000\n",
         "sort_big_file('/content/','temp.txt','sorted.txt',delete_temp_files_after_sorting)"
       ],
-      "execution_count": null,
+      "execution_count": 143,
       "outputs": []
     }
   ]
